--- a/site/app/assets/stylesheets/codemirror.css
+++ b/site/app/assets/stylesheets/codemirror.css
@@ -4,15 +4,17 @@
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
   height: 300px;
+  width: 200px;
+  border: 1px solid black; /* For editor's border */
 }
 
 /* PADDING */
 
 .CodeMirror-lines {
-  padding: 4px 0; /* Vertical padding around content */
+  padding: 4px 4px; /* Vertical padding around content */
 }
 .CodeMirror pre {
-  padding: 0 4px; /* Horizontal padding of content */
+  padding: 4px 4px; /* Horizontal padding of content */
 }
 
 .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
