Image tag testing

--- a/site/app/views/welcome/index.html.erb
+++ b/site/app/views/welcome/index.html.erb
@@ -8,3 +8,7 @@
 <% if current_user.admin? %>
 <p> GOD MODE ON </p>
 <% end %>
+<!--<img src="images/img.jpg" alt="image" /> -->
+<%= image_tag("img.jpg", :alt => "image") %>
+<br>
+<p>#chaud :D</p>
