Admin Rights Added

--- a/site/app/views/actions/instructionmanual.html.erb
+++ b/site/app/views/actions/instructionmanual.html.erb
@@ -1,32 +1,51 @@
 <html>
-<div style="top: 4%; left: 3%; position: absolute;"> 
-<h1> REQUIRED FORMAT OF TEST CASES </h1>
+<div style="top: 3%; left: 3%; position: absolute;"> 
+<h2> REQUIRED FORMAT OF PROBLEM DATA </h2>
 <b>
-1. Upload a .zip file which contains a "Input" folder and a "Output" folder
+1. Extension of the data file should be .zip.
 <br>
-2. The name of the file should be "Problem Name"_testcases.zip 
 <br>
-3.The "Input" folder should contain the input test files as follows:
+2. The name of the file should be 'problemcode'#'contestcode'#data.zip, for example PROB1#CONT1_data.zip if the problem code is PROB1 and the contest code is CONT1.
+<br>
+<br>
+3. The following format should be used for the Problem Test Data:
+<br>
+a. It should consist of a "Input" and a "Output" folder. 
+<br>
+b. The "Input" folder should contain the input test files as follows:
+<i>
+<br>
 Input00.txt
+<br>
 Input01.txt
-.
-.
-.
-so on.
 <br>
-4. The "Output" folder should contain the corresponding output files as follows:
+.
+<br>
+.
+<br>
+so on.
+</i>
+<br>
+c. The "Output" folder should contain the corresponding output files as follows:
+<i>
+<br>
 Output00.txt
+<br>
 Output01.txt
+<br>
 .
+<br>
 .
-.
+<br>
 so on.
 <br>
-5. The number of input and output files should be EQUAL.
+</i>
+d. The number of input and output files should be <i>EQUAL</i>.
 <br>
-</b>
+<br>
+
 <h2>
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, :style=>"color:#FFFFFF" %>
 <h2>
 
 </div>
