--- a/site/app/views/ourproblems/new.html.erb
+++ b/site/app/views/ourproblems/new.html.erb
@@ -26,6 +26,11 @@
    <b> <%= f.label :Problem_name %> </b>
     <%= f.text_field :name %>
   </p>
+  
+  <p>
+   <b> <%= f.label :Problem_code %> </b>
+    <%= f.text_field :code %>
+  </p>
  
   <p>
     <b> Problem Statement </b>
