--- a/site/app/views/welcome/main.html.erb
+++ b/site/app/views/welcome/main.html.erb
@@ -17,6 +17,7 @@
 	<% flag = 1 %>
 	<table>
 	<tr>
+	<td><b style="color:#FFFFFF"> Code: </b><%= ourcontest.code %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> Name: </b><%= ourcontest.name %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> Start: </b> <%= ourcontest.start.to_time.strftime('%a, %b %d %Y %H:%M') %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> End: </b> <%= ourcontest.end.to_time.strftime('%a, %b %d %Y %H:%M') %>&nbsp</td>
@@ -54,6 +55,7 @@
 	<% flag1 = 1 %>
 	<table>
 	<tr>
+	<td><b style="color:#FFFFFF"> Code: </b><%= ourcontest.code %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> Name: </b><%= ourcontest.name %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> Start: </b> <%= ourcontest.start.to_time.strftime('%a, %b %d %Y %H:%M') %>&nbsp</td>
 	<td><b style="color:#FFFFFF"> End: </b> <%= ourcontest.end.to_time.strftime('%a, %b %d %Y %H:%M') %>&nbsp</td>
