--- a/site/app/views/actions/instructionmanual.html.erb
+++ b/site/app/views/actions/instructionmanual.html.erb
@@ -1,11 +1,11 @@
 <html>
 <div style="top: 3%; left: 3%; position: absolute;"> 
-<h2> REQUIRED FORMAT OF PROBLEM DATA </h2>
+<h2> REQUIRED FORMAT OF PROBLEM TEST DATA </h2>
 <b>
-1. Extension of the data file should be .zip.
+1. Extension of the data file should be .zip and it should contain any dot other than the one in '.zip'.
 <br>
 <br>
-2. The name of the file should be 'problemcode'#'contestcode'#data.zip, for example PROB1#CONT1_data.zip if the problem code is PROB1 and the contest code is CONT1.
+2. The name of the file should be 'problemcode'#'contestcode'#data.zip, for example PROB1#CONT1#data.zip if the problem code is PROB1 and the contest code is CONT1.
 <br>
 <br>
 3. The following format should be used for the Problem Test Data:
