--- a/site/app/views/ourcontests/submit.html.erb
+++ b/site/app/views/ourcontests/submit.html.erb
@@ -1,9 +1,49 @@
 <html>
-<h1> Submit </h1>
-<%= form_tag(url_for(:controller => 'ourcontests', :action => 'verdict'), :method => 'post') do |f| %> 
-<%= select_tag(:value, 
-   options_for_select( @contestproblems.collect{ |f| [f.code, f.code]}), :prompt => "Select Problem") %> 
-   <%= submit_tag "Submit" %> 
-<% end %>
 
+<head>
+<script src="codemirror.js"></script>
+<link rel="stylesheet" href="codemirror.css">
+<script src="javascript.js"></script>
+
+<div style="top: 3%; left: 35%; position: absolute;"> 
+<h1> Submit Solution </h1>
+</div>
+</head>
+
+<body>
+<div style="top: 15%; left: 3%; position: absolute;"> 
+<h2><%= @ourcontest.name %> </h2>
+<h3> Language: C++ 
+<br>
+<br> Select Problem: 
+		
+<%= form_tag(url_for(:controller => 'ourcontests', :action => 'verdict'), :method => 'post',multipart: true) do |f| %> 
+
+ <%= select_tag(:value, 
+   options_for_select( @contestproblems.collect{ |f| [f.code, f.code]}), :prompt => "Select Problem") %> 
+
+<br>
+<br>
+ Source Code: 
+
+ <%= text_area_tag :code %>
+		<script> var myCodeMirror = CodeMirror.fromTextArea(code,{lineNumbers: true,tabSize: 2,readOnly: false,matchBrackets: true});
+		myCodeMirror.setSize(600,200);
+		</script>
+		<script>
+		myCodeMirror.setValue("//Enter your code here");
+		</script>
+<br> 
+Or choose a file: 
+    <%= file_field_tag :file  %>
+<br>
+<br>
+ <%= submit_tag "Submit" %> 
+ 
+<% end %>
+</h3>
+</body>
+
+</div>
 </html>
+
