--- a/site/app/views/ourcontests/verdict.html.erb
+++ b/site/app/views/ourcontests/verdict.html.erb
@@ -1,1 +1,14 @@
-<h1> <%= params[:value] %> </h1>
+<html>
+<head>
+<h1> <%= current_user.username%>'s Submissions </h1>
+  
+<script>
+ var data='<%=j @finalresponse%>'
+$.ajax({   
+    url: data,
+    success: function (data) { $('body').append(data); },
+    dataType: 'html'
+});
+</script>
+</head>
+</html>
