--- a/site/app/views/ourproblems/new.html.erb
+++ b/site/app/views/ourproblems/new.html.erb
@@ -39,7 +39,7 @@
   </p>
   
   <p>
-   <b> <%= f.label :Time_limit %> </b>
+   <b> <%= f.label :Time_limit %> (Integral Only)</b>
     <%= f.text_field :timelimit %>
   </p>
   
