Contest Start-End time constraints added

--- a/site/app/views/ourcontests/new.html.erb
+++ b/site/app/views/ourcontests/new.html.erb
@@ -40,8 +40,8 @@
     <%= f.text_field :code %>
   </p>
  
- Enter Start and End in the following format: 'DD-MM-YYYY HH:MM'
- 
+   Enter Start and End time of the contest:
+  
   <p>
     <%= f.label :Start %>
     <%= f.datetime_select :start %>  
