--- a/site/app/views/ourcontests/verdict.html.erb
+++ b/site/app/views/ourcontests/verdict.html.erb
@@ -1,7 +1,10 @@
 <html>
 <head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <h1> <%= current_user.username%>'s Submissions </h1>
-  
+</head>
+
+<body>
 <script>
  var data='<%=j @finalresponse%>'
 $.ajax({   
@@ -10,5 +13,5 @@ $.ajax({
     dataType: 'html'
 });
 </script>
-</head>
+</body>
 </html>
