--- a/site/app/views/ourcontests/submit.html.erb
+++ b/site/app/views/ourcontests/submit.html.erb
@@ -38,7 +38,7 @@ Or choose a file:
     <%= file_field_tag :file  %>
 <br>
 <br>
- <%= submit_tag "Submit" %> 
+ <%= submit_tag "Submit" %>  or   &nbsp <%= link_to "Check Static Code Quality", "/actions/staticcodequalitycheck",:style=>'color:#FFFFFF;' %>  
  
 <% end %>
 </h3>
