--- a/site/app/views/ourproblems/show.html.erb
+++ b/site/app/views/ourproblems/show.html.erb
@@ -35,7 +35,8 @@
  <p>
     <b> Problem Statement </b>
     <br>
-    <%= @ourproblem.statement%>
+    <%= @ourproblem.statement.gsub(/\r\n/, '<br/>') %>
+    
   </p>
   
   <p>
